# purser

./: .dockerignore  .gitignore  .gitlab-ci.yml  BRAND.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.deep  Dockerfile.hf  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TRADEMARKS.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  dependency-review.yml  release.yml  wolfi-base-check.yml
demo/: README.md  block-china.yaml  gen_samples.py
demo/models/: benign.pkl  clean-model.safetensors  config.json
deploy/grafana/: purser-overview.json
deploy/k8s/: configmap-policy.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
docs/: README.md  configuring-policy.md  data-scientists.md  devsecops-gitlab.md
policies/: allowlist-us-eu.yaml  default.yaml  signed-only.yaml  strict.yaml  trust_store.example.yaml
scripts/: gen_sbom.py  gen_third_party_licenses.py
src/purser/: __init__.py  api.py  cli.py
src/purser/core/: hf.py  (+11 more)
src/purser_deep/: __init__.py  api.py  scan.py
tests/: conftest.py  test_api.py  test_completion.py  test_deep.py  test_disguise.py  test_env.py  test_exfil.py  test_exfil_evasion.py  test_extended_formats.py  test_formats.py  test_hardening.py  test_observability.py  test_pickle_scanner.py  test_policy.py  test_policy_models.py  test_signing.py  test_source.py
(+30 files in other folders)
